Fix regression from r425073 with loadcommit events not firing for failed navigations.

In the old navigation callbacks, DidFailProvisionalLoad would fire for the failed load, and DidCommitProvisionalLoadForFrame would fire for the error page. So the webview would get both loadabort and loadcommit. Fix this with the new navigation APIs and add a regression test.

BUG: 735425
Bug: 735425
Change-Id: I1f4885fdba05cce1934d37c588aea286033b83fe
Reviewed-on: https://chromium-review.googlesource.com/779061
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518128}
Former-commit-id: d8ce902f8b56be412af44d1d6e2993b682004e7c