extensions/browser/guest_view/web_view/web_view_guest.cc
@@ -810,7 +810,11 @@ void WebViewGuest::DidFinishNavigation(
       LoadAbort(navigation_handle->IsInMainFrame(), navigation_handle->GetURL(),
                 error_code);
     }
-    return;
+    // The old behavior, before PlzNavigate, was that on failed navigations the
+    // webview would fire a loadabort (for the failed navigation) and a
+    // loadcommit (for the error page).
+    if (!navigation_handle->IsErrorPage())
+      return;
   }
 
   if (navigation_handle->IsInMainFrame()) {
